# mclaude

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
_inbox/: README.md
_inbox/findings/: 2026-04-10_session-setup-findings.md
docs/: QUICKSTART.md  architecture.md  code-review-agents.md  knowledge-base-construction.md  security-audit-recipe.md
examples/integrations/: README.md  handoff_refs_to_tracker.py
hooks/: __init__.py  install.py  mail_check.py  pre_commit_guard.py  pre_edit_lock_check.py  remind_handoff.py  session_start.py
mclaude/: __init__.py  cli.py  handoffs.py  heartbeat.py  indexer.py  locks.py  mail.py  mail_sync.py  mcp_server.py  memory.py  messages.py  registry.py  vikunja_bridge.py
mclaude/audio/: __init__.py  capture.py  registry.py  stt_faster_whisper.py  stubs.py  tts_pyttsx3.py
mclaude/bridge/: __init__.py  client.py
mclaude/client/: __init__.py  app.py
mclaude/common/: __init__.py
mclaude/hub/: __init__.py  server.py  store.py
project-kb/: README.md
project-kb/claude-rules/: knowledge-base.md
rules/: mclaude-coordination.md
scripts/: mclaude_diagram.py  mclaude_inbox_monitor.sh  mclaude_watch.py  playground.sh
tests/: conftest.py  test_common_models.py  test_handoffs.py  test_hooks.py  test_indexer.py  test_locks.py  test_mail.py  test_mail_sync.py  test_mcp_server.py  test_memory.py  test_memory_index.py  test_messages.py  test_pre_commit_guard.py  test_registry.py  test_status.py
tests/audio/: test_audio.py  test_capture.py  test_stt_faster_whisper.py  test_tts_pyttsx3.py
tests/bridge/: test_bridge.py
tests/hub/: test_server.py  test_store.py
