[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mclaude"
version = "0.2.0"
description = "Multi-session collaboration layer for Claude Code and other AI coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["claude", "claude-code", "ai-agents", "collaboration", "handoff", "memory", "locks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/AnastasiyaW/mclaude"
Repository = "https://github.com/AnastasiyaW/mclaude"
Issues = "https://github.com/AnastasiyaW/mclaude/issues"

[project.scripts]
mclaude = "mclaude.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mclaude"]
