[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mclaude"
version = "0.6.0"
description = "Multi-session collaboration for Claude Code: locks, handoffs, memory graph, messaging, hub server, voice I/O"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
    "claude", "claude-code", "ai-agents", "collaboration",
    "handoff", "memory", "locks", "messaging",
    "notification", "voice", "stt", "tts",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications",
]

# Core: ZERO dependencies (stdlib only)
# Hub/bridge/audio/client are optional extras

[project.optional-dependencies]
hub = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "httpx>=0.26",
]
client = [
    "PyQt6>=6.5",
    "plyer>=2.1",
    "pynput>=1.7",
]
audio-stt = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
]
audio-tts = [
    "pyttsx3>=2.90",
]
audio-full = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "pyttsx3>=2.90",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/AnastasiyaW/mclaude"
Repository = "https://github.com/AnastasiyaW/mclaude"
Issues = "https://github.com/AnastasiyaW/mclaude/issues"

[project.scripts]
mclaude = "mclaude.cli:main"
mclaude-hub = "mclaude.hub.server:_cli_main"

[tool.hatch.build.targets.wheel]
packages = ["mclaude"]

[tool.pytest.ini_options]
testpaths = ["tests"]
